JDOC-780 OpenAPI panel visible and perfomance fixes

--- a/src/components/MainContent/MainContent.styles.scss
+++ b/src/components/MainContent/MainContent.styles.scss
@@ -92,7 +92,6 @@
 .openapi-content {
   margin: 0;
   padding: 20px 24px;
-  white-space: pre-wrap;
   font-family: 'JetBrainsMono', serif;
   font-size: 14px;
   flex: 1;
